create and ignore _archive and move old files

--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,6 @@ vignettes/*.pdf
 # ignore .Rout files
 *.Rout
 
-# ingore locally computed result files
+# ingore locally computed result files and _archives
 /results/*
+/RCode/_archive/
